--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <table class= "mt-4">
           <tbody>
             <tr>
-              <td class="title"><a href="#">The Gallery title - Alex Pinto</a></td>
-              <td class="date">June 10 - September12, 2023</td>
+              <td class="title"><a id="tableLink" href="#">The Gallery title - Alex Pinto</a></td>
+              <td class="date">June 10 - September 12, 2023</td>
             </tr>
             <tr>
-              <td class="title"><a href="#">The Galaxy title Gallery number</a></td>
-              <td class="date">June 10 - September12, 2023</td>
+              <td class="title"><a id="tableLink" href="#">The Galaxy title Gallery number</a></td>
+              <td class="date">June 10 - September 12, 2023</td>
             </tr>
           </tbody>
           </table>
@@ -36,23 +36,119 @@
             <table>
                 <tbody>
                     <tr>
-                        <td class="title"><a href="#">The title number 2 - The Artist</a></td>
-                        <td class="date">June 10 - September12, 2023</td>
+                        <td class="title"><a id="tableLink" href="#">The title number 2 - The Artist</a></td>
+                        <td class="date">June 10 - September 12, 2023</td>
                     </tr>
                     <tr>
-                        <td class="title"><a href="#">The title number 2 - The Artist</a></td>
-                        <td class="date">June 10 - September12, 2023</td>
+                        <td class="title"><a id="tableLink" href="#">The title number 2 - The Artist</a></td>
+                        <td class="date">June 10 - September 12, 2023</td>
                     </tr>
                     <tr>
-                        <td class="title"><a href="#">The title number 2</a></td>
-                        <td class="date">June 10 - September12, 2023</td>
+                        <td class="title"><a id="tableLink" href="#">The title number 2</a></td>
+                        <td class="date">June 10 - September 12, 2023</td>
                     </tr>
                     <tr>
-                        <td class="title"><a href="#">The title number 2</a></td>
-                        <td class="date">June 10 - September12, 2023</td>
+                        <td class="title"><a id="tableLink" href="#">The title number 2</a></td>
+                        <td class="date">June 10 - September 12, 2023</td>
                     </tr>
                 </tbody>
         </table>
+         <h2 class="m-3 display-5">2021</h2>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    </div>
+
+    <div class="container">
+         <h1 class="mb-5">Past Exhibitions</h1>
+        <div class="row">
+            <div class="col">
+                <ul class="p-3">
+                    <li class="d-flex align-items-center justify-content-between">
+                        <a class="left" href="#"><img src="./images/react.svg" width="80" height="80" alt=""></a>
+                        <div class="right">
+                        <h5><a class="listLink" href="#">Gallery title - Artist Name</a></h5>
+                        <p>June 10 - September 12, 2023</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+         <div class="row">
+            <div class="col">
+                <ul class="p-3">
+                    <li class="d-flex align-items-center ">
+                        <a class="left" href="#"><img src="./images/react.svg" width="80" height="80" alt=""></a>
+                        <div class="right">
+                        <h5><a class="listLink" href="#">Gallery title - Artist Name</a></h5>
+                        <p>June 10 - September 12, 2023</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+         <div class="row">
+            <div class="col">
+                <ul class="p-3">
+                    <li class="d-flex align-items-center ">
+                        <a class="left" href="#"><img src="./images/react.svg" width="80" height="80" alt=""></a>
+                        <div class="right">
+                        <h5><a class="listLink" href="#">Gallery title Gallery Gallery title- Artist Name</a></h5>
+                        <p>June 10 - September 12, 2023</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <a href="#"><img src="./images/react.svg" alt="" width="150" height="150"></a>
+            </div>
+            <div class="col-6">
+                <a href="#"><h4>Title - Artist</h4></a>
+                <p>description summary Laboriosam totam minima quos perferendis placeat, debitis inventore 
+                Ipsum ratione, ducimus omnis consequuntur debitis ex maxime repellendus excepturi illum accusantium aliquid quod!.</p>
+            </div>
+             <div class="col-3">
+                <p>June 10 - September 12, 2023</p>
+             </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <a href="#"><img src="./images/react.svg" alt="" width="150" height="150"></a>
+            </div>
+            <div class="col-6">
+                <a href="#"><h4>Title - Artist</h4></a>
+                <p>description summary Laboriosam totam minima quos perferendis placeat, debitis inventore 
+                Ipsum ratione, ducimus omnis consequuntur debitis ex maxime repellendus excepturi illum accusantium aliquid quod!.</p>
+            </div>
+             <div class="col-3">
+                <p>June 10 - September 12, 2023</p>
+             </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <a href="#"><img src="./images/react.svg" alt="" width="150" height="150"></a>
+            </div>
+            <div class="col-6">
+                <a href="#"><h4>Title - Artist</h4></a>
+                <p>description summary Laboriosam totam minima quos perferendis placeat, debitis inventore 
+                Ipsum ratione, ducimus omnis consequuntur debitis ex maxime repellendus excepturi illum accusantium aliquid quod!.</p>
+            </div>
+             <div class="col-3">
+                <p>June 10 - September 12, 2023</p>
+             </div>
+        </div>
     </div>
   </body>
 </html>
